tests/final/expect/15__diag__axis4_wave11_dual_convergence_order_b_winner_arity_fail_no_crash.diag
Diagnostics:
Error at (547105:12): Undeclared identifier
   Hint: AX4_W11_ORDER_B_TARGET
   Spelling: axis4_wave11_order_b_layer_a.h:547105:12
